k8s-deployment/notification-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: notification-api
  template:
    metadata:
      labels:
        component: notification-api
    spec:
      containers:
        - name: notification-api
          image: chak1988/notifications-api:v2
          ports:
            - containerPort: 5001
