k8s-deployment/store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
spec:
  replicas: 2
  selector:
    matchLabels:
      component: store
  template:
    metadata:
      labels:
        component: store
    spec:
      containers:
        - name: store
          image: chak1988/store-app
          ports:
            - containerPort: 80
