k8s-deployment/products-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-api-cluster-ip-service
  labels:
    component: prod-api-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 5002
      targetPort: 5002
  selector:
    component: prod-deployment
